--- a/views/Admin/viewAllEmployee.ejs
+++ b/views/Admin/viewAllEmployee.ejs
@@ -123,15 +123,17 @@
                                     <table cellspacing="0px">
                                         <tr>
                                             <td style="padding: 0%;">
-                                                <form >
-                                                    <button type="submit">
-                                                        <i 
-                                                            class="fa fa-check-circle" 
+                                                <button 
+                                                    data-toggle="modal"
+                                                    data-target="#myModal3"
+                                                    class="mark-button" 
+                                                    id="<%= item._id %>">
+                                                        <i  
+                                                            class="fa fa-check-circle"
                                                             title="Mark Employee Attendance"
-                                                            aria-hidden="true"
-                                                        ></i>
-                                                    </button>
-                                                </form>
+                                                            aria-hidden="true">
+                                                        </i>
+                                                </button>
                                             </td>
                                             <td style="padding: 0%;">
                                                 <form method="get" action="/admin/employee-profile/<%= item._id %>">
@@ -213,6 +215,19 @@
         });
     });
 </script>
+
+<!-- PART OF: 3) HR should have a ablibity to mark attandence for any employee -->
+<script>
+    var markEmployeeId;
+
+    $(document).ready(function () {
+        $(document).on("click", ".mark-button", function () {
+            markEmployeeId = (this.id);
+            document.getElementById("modal-mark-form").action = "/admin/mark-attendance-employee/" + markEmployeeId;
+        });
+    });
+</script>
+
 <script>
 
     $(document).ready(function () {
@@ -271,6 +286,31 @@
         </form>
     </div>
 </div>
+
+<!-- PART OF: 3) HR should have a ablibity to mark attandence for any employee -->
+<div id="myModal3" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <form id="modal-mark-form" method="post" action="">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Mark Employee Attendance</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to mark employee's attendance.</p>
+                </div>
+                <div class="modal-footer">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">                   
+                    <button type="reset" class="btn btn-default" data-dismiss="modal">No</button>
+                    <button type="submit" class="btn btn-default">Yes</button>
+                </div>
+
+            </div>
+        </form>
+    </div>
+</div>
+
 <div id="myModal2" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <form method="post" action="/admin/mark-attendance">
