--- a/views/Admin/editEmployee.ejs
+++ b/views/Admin/editEmployee.ejs
@@ -79,6 +79,18 @@
                     <h1>Employee Details</h1>
                     <div id="menu1" style="height:717px;overflow: auto;">
                         <form class="form-group-sm" action="/admin/edit-employee/<%= employee._id %>" method="post">
+                            <!-- PART OF: 1) We can set Manager to Employee -->
+                            <% if (employee.type == "employee"){ %>
+                                <div class="form-group">
+                                    <label for="type">Set Manager to Employee:</label>
+                                    <select class="form-control" id="type" name="type">
+                                        <option value="<%= employee.type %>"><%= employee.type %></option>
+                                        <option value="accounts_manager">Accounts Manager</option>
+                                        <option value="project_manager">Project Manager</option>
+                                    </select>
+                                </div>
+                            <% } %>
+
                             <div class="form-group">
                                 <label for="name">Name:</label>
                                 <input type="text" onkeypress="return onlyAlphabets(event,this);" class="form-control"
