--- a/views/Admin/addEmployee.ejs
+++ b/views/Admin/addEmployee.ejs
@@ -128,11 +128,11 @@
                             <div class="form-group">
                                 <label for="number">Contact Number:</label>
                                 <% if (hasErrors){ %>
-                                <input type="text" pattern="03[0-9]{2}-(?!1234567)(?!1111111)(?!7654321)[0-9]{7}"
+                                <input type="text"
                                        value="<%= user.contactNumber %>" class="form-control" required="required"
                                        placeholder="e.g. XXXX-XXXXXXX" id="number" name="number">
                                 <% }else{ %>
-                                <input type="text" pattern="03[0-9]{2}-(?!1234567)(?!1111111)(?!7654321)[0-9]{7}"
+                                <input type="text"
                                        class="form-control" required="required" placeholder="e.g. XXXX-XXXXXXX"
                                        id="number" name="number">
                                 <% } %>
