--- a/views/Admin/editEmployee.ejs
+++ b/views/Admin/editEmployee.ejs
@@ -114,7 +114,7 @@
 
                             <div class="form-group">
                                 <label for="number">Contact Number:</label>
-                                <input type="text" pattern="03[0-9]{2}-(?!1234567)(?!1111111)(?!7654321)[0-9]{7}"
+                                <input type="text" 
                                        class="form-control" value="<%= employee.contactNumber %>" required="required"
                                        placeholder="e.g. XXXX-XXXXXXX" id="number" name="number">
                             </div>
