--- a/views/Hr/performance_appraisal.ejs
+++ b/views/Hr/performance_appraisal.ejs
@@ -8,6 +8,7 @@
     <link href="/stylesheets/simple-sidebar.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <link rel="stylesheet" href="/stylesheets/star-rating.css" media="all" type="text/css"/>
 
 
 </head>
@@ -44,18 +45,18 @@
         <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
 
             <li>
-                <a href="/manager/applied-leaves"><span class="fa-stack fa-lg pull-left"><i
-                                class="fa fa-dashboard fa-stack-1x "></i></span> View Leaves  from manager</a>
+                <a href="/hr-manager/applied-leaves"><span class="fa-stack fa-lg pull-left"><i
+                                class="fa fa-dashboard fa-stack-1x "></i></span> View Leaves</a>
             </li>
             <li>
-                <a href="/manager/view-employees">
+                <a href="/hr-manager/view-employees">
                     <button type="submit" style="background: transparent; border: transparent;"><i
                                 class="fa fa-users fa-lg " aria-hidden="true"></i> View Employees
                     </button>
                 </a>
             </li>
             <li>
-                <a href="/manager/apply-for-leave"><span class="fa-stack fa-lg pull-left"><i
+                <a href="/hr-manager/apply-for-leave"><span class="fa-stack fa-lg pull-left"><i
                                 class="fa fa-envelope-square fa-stack-1x "></i></span>Apply for Leave</a>
             </li>
             <li data-toggle="modal" data-target="#myModal">
@@ -67,7 +68,7 @@
                                 class="fa fa-check-circle fa-stack-1x "></i></span>Mark Attendance</a>
             </li>
             <li>
-                <a href="/manager/view-profile"><span class="fa-stack fa-lg pull-left"><i
+                <a href="/hr-manager/view-profile"><span class="fa-stack fa-lg pull-left"><i
                                 class="fa fa-user fa-stack-1x "></i></span>View Profile</a>
             </li>
         </ul>
@@ -77,7 +78,54 @@
         <div class="container-fluid xyz">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Welcome!</h1>
+                    <h1>Performance Appraisal</h1>
+                    <h3>Employee: <%= employee.name %></h3>
+
+                    <br>
+                    <div id="menu1" style="height:717px;overflow: auto;">
+                        <form action="/hr-manager/provide-performance-appraisal" method="post">
+                            <div class="form-group">
+                                <label for="performance_rating">Performance Rating:</label>
+                                <input id="performance_rating" name="performance_rating" value="3" mi
+                                       data-show-clear="false" class="rating-loading">
+                            </div>
+                            <div class="form-group">
+                                <label for="expertise">Position Expertise:</label>
+                                <input type="text" class="form-control" required="required" id="expertise"
+                                       name="expertise">
+                            </div>
+                            <div class="form-group">
+                                <label for="approach_quality">Approach towards Quality Of Work:</label>
+                                <input type="text" class="form-control" required="required" id="approach_quality"
+                                       name="approach_quality">
+                            </div>
+                            <div class="form-group">
+                                <label for="approach_quantity">Approach Towards Quantity Of Work:</label>
+                                <input type="text" class="form-control" required="required" id="approach_quantity"
+                                       name="approach_quantity">
+                            </div>
+                            <div class="form-group">
+                                <label for="lead_manage">Leadership and Management Skills:</label>
+                                <textarea name="lead_manage" class="form-control" required="required"
+                                          style="resize: none" id="lead_manage" rows="3"></textarea></p>
+                            </div>
+                            <div class="form-group">
+                                <label for="skills_com">Communication Skills:</label>
+                                <textarea name="skills_com" class="form-control" required="required"
+                                          style="resize: none" id="skills_com" rows="3"></textarea></p>
+                            </div>
+                            <div class="form-group">
+                                <label for="comments">Comments On Overall Performance:</label>
+                                <textarea name="comments" class="form-control" required="required" style="resize: none"
+                                          id="comments" rows="3"></textarea></p>
+                            </div>
+                            <br>
+                            <input type="hidden" id="employee_id" name="employee_id" value="<%= employee._id %>">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <button type="button" onclick="history.go(-1);" class="btn btn-default">Cancel</button>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -89,22 +137,34 @@
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.js" charset="UTF-8"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js" charset="UTF-8"></script>
-
-
+<script src="/javascripts/star-rating.js" type="text/javascript"></script>
 <script src="/javascripts/sidebar_menu.js"></script>
 <script>
-
     $(document).ready(function () {
         for (i = new Date().getFullYear(); i > 1900; i--) {
             $('#year').append($('<option />').val(i).html(i));
         }
+        var box1height = $('#menu1').height();
+        // Set box2 height equal to box1
+        $('#sidebar-wrapper').height(box1height * 1.27);
+        $('#performance_rating').rating({
+            step: 1,
+            starCaptions: {1: 'Very Poor', 2: 'Poor', 3: 'Satisfactory', 4: 'Good', 5: 'Excellent'},
+            starCaptionClasses: {
+                1: 'text-danger',
+                2: 'text-warning',
+                3: 'text-info',
+                4: 'text-primary',
+                5: 'text-success'
+            }
+        });
     });
 </script>
 </body>
 
 <div id="myModal2" class="modal fade" role="dialog">
     <div class="modal-dialog">
-        <form method="post" action="/manager/mark-manager-attendance">
+        <form method="post" action="/hr-manager/mark-manager-attendance">
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
@@ -130,7 +190,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <form method="post" action="/manager/view-attendance">
+            <form method="post" action="/hr-manager/view-attendance">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Select Month/Year</h4>
