--- a/views/Hr/projectInfo.ejs
+++ b/views/Hr/projectInfo.ejs
@@ -44,18 +44,18 @@
         <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
 
             <li>
-                <a href="/manager/applied-leaves"><span class="fa-stack fa-lg pull-left"><i
-                                class="fa fa-dashboard fa-stack-1x "></i></span> View Leaves  from manager</a>
+                <a href="/hr-manager/applied-leaves"><span class="fa-stack fa-lg pull-left"><i
+                                class="fa fa-dashboard fa-stack-1x "></i></span> View Leaves</a>
             </li>
             <li>
-                <a href="/manager/view-employees">
+                <a href="/hr-manager/view-employees">
                     <button type="submit" style="background: transparent; border: transparent;"><i
                                 class="fa fa-users fa-lg " aria-hidden="true"></i> View Employees
                     </button>
                 </a>
             </li>
             <li>
-                <a href="/manager/apply-for-leave"><span class="fa-stack fa-lg pull-left"><i
+                <a href="/hr-manager/apply-for-leave"><span class="fa-stack fa-lg pull-left"><i
                                 class="fa fa-envelope-square fa-stack-1x "></i></span>Apply for Leave</a>
             </li>
             <li data-toggle="modal" data-target="#myModal">
@@ -67,7 +67,7 @@
                                 class="fa fa-check-circle fa-stack-1x "></i></span>Mark Attendance</a>
             </li>
             <li>
-                <a href="/manager/view-profile"><span class="fa-stack fa-lg pull-left"><i
+                <a href="/hr-manager/view-profile"><span class="fa-stack fa-lg pull-left"><i
                                 class="fa fa-user fa-stack-1x "></i></span>View Profile</a>
             </li>
         </ul>
@@ -77,7 +77,25 @@
         <div class="container-fluid xyz">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Welcome!</h1>
+                    <div id="menu1">
+                        <h1>Project Information</h1>
+                        <br>
+                        <form class="form-group-sm">
+                            <h4>Employee: <label id="title"><%= employee.name %></label></h4>
+                            <h4>Title : <label id="title"><%= project.title %></label></h4>
+                            <h4>Type : <label id="type"><%= project.type %></label></h4>
+                            <h4>Status : <label id="status"><%= project.status %></label></h4>
+                            <h4>Start Date : <label
+                                        id="start"><%= moment(project.startDate).format('MMMM Do YYYY'); %></label></h4>
+                            <h4>End Date : <label
+                                        id="end"><%= moment(project.endDate).format('MMMM Do YYYY'); %></label></h4><br>
+                            <h4 style="font-size: x-large">Description:</h4>
+                            <div style="height: 250px; overflow: auto;">
+                                <p style="font-family: 'Arial Nova'; font-size: medium" id="description"
+                                   style="word-wrap: break-word;"><%= project.description; %></p>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -89,22 +107,24 @@
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.js" charset="UTF-8"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js" charset="UTF-8"></script>
-
-
 <script src="/javascripts/sidebar_menu.js"></script>
 <script>
-
     $(document).ready(function () {
+        var box1height = $('#menu1').height();
+        // Set box2 height equal to box1
+        $('#sidebar-wrapper').height(box1height * 1.2);
         for (i = new Date().getFullYear(); i > 1900; i--) {
             $('#year').append($('<option />').val(i).html(i));
         }
+
     });
 </script>
 </body>
 
+
 <div id="myModal2" class="modal fade" role="dialog">
     <div class="modal-dialog">
-        <form method="post" action="/manager/mark-manager-attendance">
+        <form method="post" action="/hr-manager/mark-manager-attendance">
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
@@ -130,7 +150,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <form method="post" action="/manager/view-attendance">
+            <form method="post" action="/hr-manager/view-attendance">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Select Month/Year</h4>
