--- a/views/Hr/viewManagerProfile.ejs
+++ b/views/Hr/viewManagerProfile.ejs
@@ -44,18 +44,18 @@
         <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
 
             <li>
-                <a href="/manager/applied-leaves"><span class="fa-stack fa-lg pull-left"><i
-                                class="fa fa-dashboard fa-stack-1x "></i></span> View Leaves  from manager</a>
+                <a href="/hr-manager/applied-leaves"><span class="fa-stack fa-lg pull-left"><i
+                                class="fa fa-dashboard fa-stack-1x "></i></span> View Leaves</a>
             </li>
             <li>
-                <a href="/manager/view-employees">
+                <a href="/hr-manager/view-employees">
                     <button type="submit" style="background: transparent; border: transparent;"><i
                                 class="fa fa-users fa-lg " aria-hidden="true"></i> View Employees
                     </button>
                 </a>
             </li>
             <li>
-                <a href="/manager/apply-for-leave"><span class="fa-stack fa-lg pull-left"><i
+                <a href="/hr-manager/apply-for-leave"><span class="fa-stack fa-lg pull-left"><i
                                 class="fa fa-envelope-square fa-stack-1x "></i></span>Apply for Leave</a>
             </li>
             <li data-toggle="modal" data-target="#myModal">
@@ -66,8 +66,8 @@
                 <a href="#"><span class="fa-stack fa-lg pull-left"><i
                                 class="fa fa-check-circle fa-stack-1x "></i></span>Mark Attendance</a>
             </li>
-            <li>
-                <a href="/manager/view-profile"><span class="fa-stack fa-lg pull-left"><i
+            <li class="active">
+                <a href="/hr-manager/view-profile"><span class="fa-stack fa-lg pull-left"><i
                                 class="fa fa-user fa-stack-1x "></i></span>View Profile</a>
             </li>
         </ul>
@@ -77,7 +77,54 @@
         <div class="container-fluid xyz">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Welcome!</h1>
+                    <div id="menu1">
+                        <h1>Profile</h1>
+                        <br>
+                        <form class="form-group-sm" method="get" action="/hr-manager/view-all-personal-projects">
+                            <h4>Name : <label id="name"><%= employee.name %></label></h4>
+                            <h4>Email : <label id="type"><%= employee.email %></label></h4>
+                            <h4>Date of Birth : <label
+                                        id="dob"><%= moment(employee.dateOfBirth).format('MMMM Do YYYY') %></label></h4>
+                            <h4>Department : <label id="department"><% if(!employee.department){%>
+                                    <%="N/A"%>
+                                    <%
+                                    }
+                                    else{%>
+                                    <%=employee.department%>
+                                    <%}%></label></h4>
+                            <h4>Designation : <label id="designation"><% if(!employee.designation){%>
+                                    <%="N/A"%>
+                                    <%
+                                    }
+                                    else{%>
+                                    <%=employee.designation%>
+                                    <%}%></label></h4>
+                            <%if(employee.type=="project_manager"){%>
+                            <h4>Projects : <label id="projects">
+                                    <button type="submit" class="form-control">View Projects</button>
+                                </label></h4>
+
+                            <% if(employee.Skills.length > 0){ %>
+
+                            <h4>Skills:</h4>
+                            <div style="height: 250px; overflow: auto;">
+                                <ul class="list-group" id="skills">
+                                    <%
+                                    employee.Skills.forEach(function(val){
+                                    if(val != ""){ %>
+                                    <li class="list-group-item"><%= val %></li>
+
+                                    <% }
+                                    }) %>
+
+                                </ul>
+                            </div>
+                            <% }else{ %>
+                            <h4>Skills : <label id="skills">N/A</label></h4>
+                            <% } %>
+                            <%}%>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -104,7 +151,7 @@
 
 <div id="myModal2" class="modal fade" role="dialog">
     <div class="modal-dialog">
-        <form method="post" action="/manager/mark-manager-attendance">
+        <form method="post" action="/hr-manager/mark-manager-attendance">
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
@@ -130,7 +177,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <form method="post" action="/manager/view-attendance">
+            <form method="post" action="/hr-manager/view-attendance">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Select Month/Year</h4>
