5) to caluculate Salary based on Total working days

--- a/views/Employee/viewMonthlyProfile.ejs
+++ b/views/Employee/viewMonthlyProfile.ejs
@@ -75,6 +75,8 @@
         <div class="container-fluid xyz">
             <div class="row">
                 <div class="col-lg-12">
+                    <!-- PART OF: 5) to caluculate Salary based on Total working Days -->
+                    <h1>Salary based on Total working Days <%= userMonthlySalary %></h1><br>
                     <h1>Monthly attendance <%= foundTotalDays %></h1><br>
                     <div style="height:max-content; overflow: auto">
                         <% if (foundTotalDays){ %>
